links/main.css
* { margin:0; padding:0; border:0; outline:0; border-spacing:0; text-decoration:none; font-weight:inherit; font-style:inherit; color:inherit; font-size:100%; vertical-align:baseline; list-style:none; border-collapse:collapse; }
*:focus { outline: none}
:root { --margin: 10px; --padding: 10px; }
body { background:var(--background); font-family: var(--font); overflow-x: hidden; transition: opacity 150ms; opacity: 1 !important; font-family: var(--font); font-size: 12px }
h1 { color: var(--f_med); font-size: 28px; font-weight: bolder; text-transform: uppercase; }
h2 { color: var(--f_high); font-size: 22px; font-weight: bolder; text-transform: uppercase; line-height: 1.2; }
h3 { color: var(--b_med); font-size: 12px; font-weight: bolder; text-transform: uppercase; line-height: 1; }
p { font-size: 18px; font-weight: bolder; color: var(--b_med); text-transform:uppercase; margin-top: 10px }
b { font-weight:bold }
i { font-style:italic }
a { cursor: pointer }
ul { display: block }
ul li { display: block }
hr { clear:both }
code { display: block; white-space: pre }
small { font-size: 80%; }

#zyklus { position: relative; width: 100%; max-width: 500px; min-height: 95vh; margin: 0 auto; overflow: hidden; background: var(--background);}
#zyklus #content { padding-left: 10px; padding-right: 10px; }
#zyklus #menu { display: flex; justify-content: space-evenly; margin: var(--margin); margin-top: 0; }
#zyklus #menu #item { display: grid; margin-right: 8px;}
#zyklus #menu #item:last-child { margin: 0;}
#zyklus #menu #item svg { background-color: var(--b_low); fill: var(--f_med); stroke: var(--f_med); }
#zyklus #menu #item svg:hover { background-color: var(--f_low); fill: var(--b_high); stroke: var(--b_high); }
#zyklus #menu #item svg.selected { background-color: var(--f_med); fill: var(--b_low); stroke: var(--b_low); }
#zyklus figure { margin-bottom: var(--margin); }
#zyklus figure header { display: flex; justify-content: space-between; background-color: var(--f_med); }
#zyklus figure header h1 { color: var(--b_low); padding: var(--padding); }
#zyklus figure header span.close { display:flex; justify-content: center; width:55px; font-size: 60px; line-height: 0.75; font-weight: 300; color: var(--b_low); border-left: 4px solid var(--b_low); cursor: pointer; }
#zyklus figure header span.close:hover { color: var(--b_high); background-color: var(--f_low); }
#zyklus figure header.fail { background-color: var(--f_high); }
#zyklus figure header.fail h1 { color: var(--b_high); }
#zyklus figure section { background-color: var(--b_low); margin-bottom: var(--margin); padding: var(--padding); }
#zyklus figure.info section { display: flex; align-items: flex-end; box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; }
#zyklus figure.info .day { width: 24%; border-right: 4px solid var(--f_low); text-align: center; }
#zyklus figure.info .day h1 { font-size: 80px; }
#zyklus figure.info .stats { width: calc(75%-40px); padding: 10px 20px 10px 20px; }
#zyklus figure.overview section.bar { height: 50px; margin-bottom: 10px; }
#zyklus figure.overview section.legend ul { display:flex; background-color: var(--background); }
#zyklus figure.overview section.legend li { display: flex; margin-right:10px; padding: 10px; align-items: center; }
#zyklus figure.overview section.legend li:last-child { margin-right:0px; }
#zyklus figure.overview section.legend svg { margin-right: 6px; }
#zyklus figure.entry section { display: flex; justify-content: space-between; margin: 0; }
#zyklus figure.entry section span { width:100%; margin-right: var(--margin); }
#zyklus figure.entry section span:last-child { margin: 0; }
#zyklus .button { height: 75px !important; }
#zyklus #popup { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
#zyklus #popup #overlay { position: absolute; width: 100%; height: 100%; background-color: var(--b_inv); opacity: 0.5; }
#zyklus #datepicker { position: absolute; top: 25%; left: 0; display: block; width: 100%; }
#zyklus #datepicker section.datepicker { display: flex; justify-content: space-evenly; }
#zyklus #datepicker section.datepicker span { display: block; width:30%;}
#zyklus form { width: 100%; }
#zyklus form input { width:100%; font-size: 24px; font-family:inherit; }
#zyklus form select,
#zyklus form input { color: var(--b_low); background-color: var(--b_high); width: 100%; box-sizing: border-box;  border-radius: 0; -moz-appearance: none; -webkit-appearance: none; appearance: none; }
#zyklus form input[type=submit],
#zyklus form input[type=button] { height:75px; cursor: pointer; background-color: var(--f_med); text-transform: uppercase; font-weight: bolder;  }
#zyklus form input[type=submit]:hover,
#zyklus form input[type=button]:hover { color:var(--b_high); background-color: var(--f_low);  }
#zyklus form input[type=text],
#zyklus form input[type=password] { padding: 8px;  }
#zyklus form section { margin-bottom: 0; }
#zyklus form select {
    display: block; font-size: 16px; padding: .6em 1.4em .5em .8em; line-height: 1.3; margin: 4px 0;
    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%234B4B49%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');    background-repeat: no-repeat, repeat;
    background-position: right .7em top 50%, 0 0; background-size: .65em auto, 100%;
}
#zyklus form select::-ms-expand { display: none; }
#zyklus form select:focus { border-color: var(--b_low); box-shadow: 0 0 1px 3px var(--b_low); box-shadow: 0 0 0 3px -moz-mac-focusring; color: var(--b_low);  outline: none; }
#zyklus form select option { font-weight:normal; }
#zyklus form.dateButton { position:relative; width: 100%; height:100%; background-color: var(--f_med); }
#zyklus form.dateButton label { position: absolute; width: 100%; height: 100%; display: flex; justify-content: center; flex-direction: column; font-size: 24px; font-weight: bolder; text-align: center; text-transform: uppercase; }
#zyklus form.dateButton input { position: absolute; width: 100%; height: 100%; display: block; opacity: 0; }

